webpage styling & functionality done.

--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
     <h1>Number Generator</h1>
     <h2>30DaysOfJavaScript:DOM Day 2</h2>
     <h3>Author: Asabeneh Yetayeh</h3>
+    <div id="functionality">
+        <p></p>
+        <div id="user">
+            <input type="text" placeholder="">
+            <button>Generate Number</button>
+        </div>
+    </div>
     <div class="wrapper">
 
     </div>
